--- a/src/app/view/pages/page-erlaeuterungen/erlaeuterungen.component.html
+++ b/src/app/view/pages/page-erlaeuterungen/erlaeuterungen.component.html
@@ -2,34 +2,34 @@
   <h2 class="title">Erläuterungen und Glossar Datenbank Gossembrot</h2>
 
   <strong class="margin-top">
-    Stand: 23. Juli 2025
+    Stand: 28. Januar 2026
   </strong>
-  <p class="margin-top">In der obersten Zeile können neben dem Symbol der Startseite (Haus) die Rubriken ‚Erhaltene Handschriften‘, ‚Rekonstruierte Textträger‘, ‚Kanonische Werke‘ und ‚Visualisierungen‘ ausgewählt werden. Erläuterungen finden sich in den unterlegten Tooltips. Am rechten Rand lässt sich über das Mond- bzw. Sonnensymbol der Bildschirmhintergrund anpassen.</p>
+  <p class="margin-top">In der obersten Zeile können neben dem Symbol der Startseite (Haus) die Rubriken wie ‚Erhaltene Handschriften‘ oder ‚Erläuterungen‘ ausgewählt werden. Erläuterungen finden sich auch in den unterlegten Tooltips. Am rechten Rand lässt sich über das Mond- bzw. Sonnensymbol der Bildschirmhintergrund anpassen.</p>
 
   <h3 class="subtitle margin-top">Erhaltene Handschriften:</h3>
   <p>Auf der linken Seite stehen Angaben zu den bisher bekannten erhaltenen Handschriften der Gossembrot-Bibliothek: Im Menü ‚Manuskriptauswahl‘ können die einzelnen Handschriften angezeigt werden.</p>
-  <p>Unterhalb der Manuskriptauswahl steht eine kurze kodikologische Beschreibung der Handschrift (Beschreibstoff, Gröẞe, Entstehungszeitraum, Lagenstruktur).</p>
-  <p>Anschließend sind alle in der ausgewählten Handschrift enthaltenen Verweise aufgeführt. Aufgeführt werden jeweils Blatt-Angabe, Wortlaut sowie die Zielstelle der Verweise auf erhaltene und verschollene Textträger.</p>
+  <p>Unterhalb der Manuskriptauswahl steht eine kurze kodikologische Beschreibung der Handschrift (Beschreibstoff, Grösse, Entstehungszeitraum, Lagenstruktur).</p>
+  <p>Anschließend sind alle in der ausgewählten Handschrift enthaltenen Verweise aufgeführt. Angegeben werden jeweils Blattziffer, Wortlaut sowie die Zielstelle der Verweise auf erhaltene und verschollene Textträger.</p>
   <p>Verweise auf Stellen innerhalb der Handschrift sind durch die Angabe ‚Interner Verweis‘ eingeleitet. Durch Klick auf den Verweis wird im danebenstehenden Digitalfaksimile das entsprechende geöffnete Doppelblatt aufgerufen. Nach Anklicken eines Verweises, stehen die folgenden Optionen zur Verfügung: Detailansicht (Quelle, Verweistext, Ziel); Weiterleitung zur Verweis-Synopse; Öffnen der Zielhandschrift.</p>
   <p>Auf der rechten Seite finden sich Angaben zu dem aktuell angezeigten Abschnitt der Handschrift:</p>
   <p>Unter ‚Textauswahl-Textanzeige‘ sind die einzelnen Texte der Handschrift erreichbar; über die links und rechts neben der ‚Textauswahl-Textanzeige‘ angezeigten Pfeile ist ein Wechsel zum vorangehenden oder folgenden Text möglich. Die ‚Verweisauswahl‘ zeigt die Seiten an, auf denen sich von Gossembrot eingetragene Verweise befinden.</p>
-  <p>Unterhalb der Text- und Verweisauswahl befindet sich die im Digitalfaksimile aufgeschlagene Doppelseite der Handschrift, eingeleitet durch eine Anzeige der Lagenstruktur, Blattangaben sowie die Möglichkeit der Blattauswahl.</p>
+  <p>Unterhalb der Text- und Verweisauswahl befindet sich die im Digitalfaksimile aufgeschlagene Doppelseite der Handschrift, eingeleitet durch eine Anzeige der Lagenstruktur, Blattangabe sowie die Möglichkeit der Blattauswahl.</p>
   <p>In den Lagensymbolen sind fehlende Blätter einer Lage mit einer verkürzten Linie (Stummel) dargestellt. Gestrichelte Linien kennzeichnen Lagen, die aus mindestens zwei verschiedenen Teilen zusammengesetzt sind und somit ursprünglich keine Einheit bildeten.</p>
   <p>In den Digitalfaksimiles kann über das Anklicken der eingeblendeten Pfeile oder über die Bedienung der Pfeiltasten (links bzw. rechts) vorwärts und rückwärts geblättert werden.</p>
 
   <h3 class="subtitle margin-top">Rekonstruierte Textträger:</h3>
-  <p>Hier stehen drei Kategorien zur Auswahl: Handschriften aus Gossembrots Bibliothek, Handschriften außerhalb Gossembrots Bibliothek und Drucke aus Gossembrots Bibliothek.</p>
+  <p>Hier stehen vier Kategorien zur Auswahl: Handschriften aus Gossembrots Bibliothek, Handschriften ausserhalb Gossembrots Bibliothek, Drucke aus Gossembrots Bibliothek und für Gossembrot unzugängliche Textträger.</p>
   <p>Ein Auswahlmenü ermöglicht die Selektion der einzelnen rekonstruierten Textträger.</p>
   <p>Darunter befindet sich eine kurze kodikologische Beschreibung des Textträgers nach Gossembrots Angaben (Materialität, Benennung nach Gossembrot).</p>
-  <p>Anschließend sind jene Verweise Gossembrots aufgeführt, die sich auf den Inhalt des rekonstruierten Textträgers beziehen. Beim Anklicken der einzelnen Verweistexte wird die jeweilige Handschriftenseite angezeigt, die den Verweis enthält. Nach Anklicken eines Verweises, stehen zudem die folgenden Optionen zur Verfügung: Detailansicht (Quelle, Verweistext, Ziel); Weiterleitung zur Verweis-Synopse; Öffnen der Beleg-Handschrift in einem neuen Tab.</p>
+  <p>Anschließend sind jene Verweise Gossembrots aufgeführt, die sich auf den Inhalt des rekonstruierten Textträgers beziehen. Beim Anklicken der einzelnen Verweistexte wird die jeweilige Handschriftenseite angezeigt, die den Verweis enthält. Nach Anklicken eines Verweises stehen zudem die folgenden Optionen zur Verfügung: Detailansicht (Quelle, Verweistext, Ziel); Weiterleitung zur Verweis-Synopse; Öffnen der Beleg-Handschrift in einem neuen Tab.</p>
 
   <h3 class="subtitle margin-top">Kanonische Werke:</h3>
   <p>Hier sind Gossembrots Verweise auf bekannte oder weit verbreitete Texte zusammengetragen, für die sich kein einst vorhandenes physisches Exemplar erschließen lässt (Texte, die Gossembrot ‚im Kopf‘ hatte oder in fremden Bibliotheken konsultierte). Der weitere Seitenaufbau entspricht jenem der rekonstruierten Textträger.</p>
 
   <h3 class="subtitle margin-top">Visualisierungen:</h3>
-  <p>Die durch die Querverweise hergestellten Verbindungen zwischen den einzelnen Handschriften und ihren Inhalten können anhand der hier eingebunden Netzwerkdiagramme optisch angezeigt werden. Es stehen mehrere Filteroptionen zur Verfügung:</p>
+  <p>Die durch die Querverweise hergestellten Verbindungen zwischen den einzelnen Handschriften und ihren Inhalten können anhand der hier eingebunden Netzwerkdiagramme optisch angezeigt werden. Unter ‚Einstellungen und Filter‘ stehen mehrere Filteroptionen zur Verfügung:</p>
   <ul>
-    <li><strong>Granularität der Anzeige:</strong> Erlaubt die Wahl, Verbindungen zwischen Textträgern, Texten oder Textträgern und Texten anzuzeigen. Je nach Auswahl repräsentieren die einzelnen, links eingeblendeten Punkte Textträger und/oder Texte. Pfeile, die die einzelnen Punkte miteinander verbinden, repräsentieren die Querverweise. Ihre Richtung gibt an, ob es sich um ausgehende oder eingehende Verweise handelt. Die Anzahl der Verweise, die von einem Text(träger) auf einen anderen zielen, wird durch die Größe der Pfeile angedeutet. Je mehr Verweise von einem Punkt auf den anderen zielen, desto dicker erscheint der Pfeil.</li>
+    <li><strong>Granularität der Anzeige:</strong> Erlaubt die Wahl, Verbindungen zwischen Textträgern, Texten oder Textträgern und Texten anzuzeigen. Je nach Auswahl repräsentieren die einzelnen eingeblendeten Punkte Textträger und/oder Texte. Pfeile, die die einzelnen Punkte miteinander verbinden, repräsentieren die Querverweise. Ihre Richtung gibt an, ob es sich um ausgehende oder eingehende Verweise handelt. Die Anzahl der Verweise, die von einem Text(träger) auf einen anderen zielen, wird durch die Größe der Pfeile angedeutet. Je mehr Verweise von einem Punkt auf den anderen zielen, desto dicker erscheint der Pfeil.</li>
     <li><strong>Detailfilter:</strong> Ermöglicht die Auswahl einzelner Textträger.</li>
     <li><strong>Globale Filter:</strong> Angebot weiterer Filteroptionen nach Bestand (aus Gossembrots Bibliothek oder externe Textträger), Beschaffenheit (Handschrift, Druck, Kanonisches Werk) und Verfügbarkeit (erhaltene oder verlorene Textträger).</li>
   </ul>
@@ -42,17 +42,26 @@
     <li><strong>karta:</strong> Gossembrot bezeichnet die Blätter in der Regel mit <span class="cite">karta</span>. Aus Verweisen auf erhaltenen Handschriften geht hervor, dass sich  <span class="cite">karta</span> dabei auf die aufgeschlagene Doppelseite und damit auch auf die vorausgehende verso-Seite bezieht. Beispiel: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 44v:  <span class="cite">Eloq(uentia) q(uomodo) (com)p(ar)a(tur) nauigat(i)o(n)i (et) m(er)cancie vide | an(tea) a k(arta) .29.</span> [Signum], zielt auf: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 28v, wo das im Verweis genannte Signum zu finden ist.</li>
   </ul>
 
-  <!--
-  <h3 class="subtitle margin-top">Nennungen:</h3>
-  <p>Gossembrot benennt die einzelnen Bücher seiner Bibliothek oft nach den in diesen enthaltenen (Haupt-)Texten. Wenn ein Verweis nicht auf eine Stelle in diesen Texten zielt, wird dieser Verweis zusätzlich als Nennung aufgenommen. Für nicht erhaltene Textträger lassen sich aus derartigen Nennungen in den Verweistexten neben den genannten Zieltexten oft weitere Inhalte rekonstruieren. In der Datenbank sind diese Rekonstruktionen mit dem Zusatz <em>(Nennung)</em> gekennzeichnet.</p>
+  <h3 class="subtitle margin-top">Suche</h3>
+    <p>Die Projektseite bietet mehrere Suchfunktionen. Eine Schnellsuche steht oben rechts allen Nutzerinnen und Nutzern zur Verfügung und kann auch über den Reiter “Expertensuche” abgerufen werden, der detailliertere Suchmöglichkeiten bietet. Sofern sie in der Gemeinsamen Normdatei (GND) erfasst sind, werden die in der Datenbank aufgeführten Autoren und Autorinnen mit ihrer GND-ID verknüpft. Die in der GND aufgenommenen alternativen Schreibweisen der einzelnen Personen können in der Schnellsuche gesucht werden. Weicht der gesuchte Name von jenem ab, der üblicherweise in der Datenbank verwendet wird, scheint dieser in der Schnellsuche in eckigen Klammern auf. Hinweis: Eine Suche nach alternativen Schreibweisen ist nur in der Schnellsuche möglich.</p>
+    <p>Eine Suche nach Autoren, Autorinnen und Texten ist in der Expertensuche möglich. Hier besteht auch die Möglichkeit, die Verweistexte zu durchsuchen.</p>
 
-  <h3 class="subtitle margin-top">Nennungen anzeigen:</h3>
-  <p>Blendet Nennungen ein und aus. Die Nennungen werden rot gedruckt.</p>
-  -->
+  <h3 class="subtitle margin-top">Kodikologische Angaben in Gossembrots Terminologie</h3>
+    <ul>
+        <li><b>arcus modus:</b> Bezeichnet das Folio-Format. Beispiel: München, Bayerische Staatsbibliothek, Clm 17836, Format 26,8 x 20,7 cm, Benennung durch Gossembrot: ‚Albus codex spissus arcus modus in Didascalicon et aliis operibus‘ (nach München, Bayerische Staatsbibliothek, Clm 3559, Bl. 2r).</li>
+        <li><b>textus modus:</b> Bezeichnet das Quart-Format. Beispiel München, Bayerische Staatsbibliothek, Clm 27419, Format 21 x 14,5 cm, Benennung durch Gossembrot: ‚Liber albus spissus confessionalis textus modus‘ (nach München, Bayerische Staatsbibliothek, Clm 3941, Bl.14r).</li>
+        <li><b>modus regalis:</b> Bezeichnet das große Folio-Format.</li>
+        <li><b>codex huius quantitatis:</b> Bezeichnet einen Codex derselben Größe wie jenen, in dem der Verweis steht.</li>
+        <li><b>in sexternis non illigatis:</b> Bezeichnet Sexternionen in einem ungebundenen Codex.</li>
+        <li><b>in/sine asseribus:</b> Bezeichnet den am Codex bereits vorhandenen bzw. (noch) fehlenden Buchdeckel.</li>
+        <li><b>karta:</b> Gossembrot bezeichnet die Blätter in der Regel mit karta. Aus Verweisen auf erhaltenen Handschriften geht hervor, dass sich karta dabei auf die aufgeschlagene Doppelseite und damit auch auf die vorausgehende verso-Seite bezieht.
+            Beispiel: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 44v: Eloq(uentia) q(uomodo) (com)p(ar)a(tur) nauigat(i)o(n)i (et) m(er)cancie vide | an(tea) a k(arta) .29. [Signum], zielt auf: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 28v, wo das im Verweis genannte Signum [liegender Halbmond] zu finden ist.
+        </li>
+    </ul>
 
   <h3 class="subtitle margin-top">Transkriptionen:</h3>
 
-  <p>Die Transkriptionen erfolgen getreu der Handschrift. Zeilenumbrüche sind durch | markiert. Abkürzungen werden in Klammern aufgelöst. Es kommt ein Tagging-System zum Einsatz, das Eigenschaften des Originaltextes kennzeichnet (u.a. Hinzufügungen, Unterstreichungen, Korrekturen). Auf der Benutzeroberfläche wird dieses durch Farbkodierungen bzw. Auszeichnungen dargestellt (Umsetzung in Arbeit):
+  <p>Die Transkriptionen erfolgen getreu der Handschrift. Zeilenumbrüche sind durch | markiert. Abkürzungen werden in Klammern aufgelöst. Es kommt ein Tagging-System zum Einsatz, das Eigenschaften des Originaltextes kennzeichnet (u.a. Additionen, Unterstreichungen, Korrekturen). Auf der Benutzeroberfläche wird dieses durch Farbkodierungen bzw. Auszeichnungen dargestellt:
   </p>
   <ul class="margin-bottom-end">
       <li>Hinzufügungen: <app-tei-render-component [teiXmlString]="addExample"></app-tei-render-component></li>
