chore: change erlaeuterungen

--- a/src/app/view/pages/page-erlaeuterungen/erlaeuterungen.component.html
+++ b/src/app/view/pages/page-erlaeuterungen/erlaeuterungen.component.html
@@ -34,19 +34,15 @@
     <li><strong>Globale Filter:</strong> Angebot weiterer Filteroptionen nach Bestand (aus Gossembrots Bibliothek oder externe Textträger), Beschaffenheit (Handschrift, Druck, Kanonisches Werk) und Verfügbarkeit (erhaltene oder verlorene Textträger).</li>
   </ul>
 
-  <h3 class="subtitle margin-top">Kodikologische Angaben in Gossembrots Terminologie</h3>
-  <ul>
-    <li><strong>arcus modus:</strong> Bezeichnet das Folio-Format. Beispiel: München, Bayerische Staatsbibliothek, Clm 17836, Format 26,8 x 20,7 cm, Benennung durch Gossembrot: ‚Albus codex spissus arcus modus in Didascalicon et aliis operibus‘ (nach München, Bayerische Staatsbibliothek, Clm 3559, Bl. 2r).</li>
-    <li><strong>textus modus:</strong> Bezeichnet das Quart-Format. Beispiel: München, Bayerische Staatsbibliothek, Clm 27419, Format 21 x 14,5 cm, Benennung durch Gossembrot: ‚Liber albus spissus confessionalis textus modus‘ (nach München, Bayerische Staatsbibliothek, Clm 3941, Bl.14r).</li>
-    <li><strong>modus regalis:</strong> Bezeichnet das große Folio-Format.</li>
-    <li><strong>karta:</strong> Gossembrot bezeichnet die Blätter in der Regel mit <span class="cite">karta</span>. Aus Verweisen auf erhaltenen Handschriften geht hervor, dass sich  <span class="cite">karta</span> dabei auf die aufgeschlagene Doppelseite und damit auch auf die vorausgehende verso-Seite bezieht. Beispiel: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 44v:  <span class="cite">Eloq(uentia) q(uomodo) (com)p(ar)a(tur) nauigat(i)o(n)i (et) m(er)cancie vide | an(tea) a k(arta) .29.</span> [Signum], zielt auf: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 28v, wo das im Verweis genannte Signum zu finden ist.</li>
-  </ul>
+    <h3 class="subtitle margin-top">Suche</h3>
+    <p>Die Projektseite bietet mehrere Suchfunktionen. Eine <b>Schnellsuche steht</b> oben rechts zur Verfügung. Es handelt sich um eine Freitextsuche, welche Resultate nach Autoren, Texten, Verweistexten (Wortlaut Gossembrots) und Bennenungen der Handschriften Gossembrots gruppiert. Die Suche startet automatisch nach Eingabe von drei Zeichen. Dieselbe Suchmaske ist auch über den Reiter "Expertensuche" erreichbar.</p>
+    <p><b>Autoren und Autorinnen</b>, die in der <b>Gemeinsamen Normdatei (GND)</b> erfasst sind, hat das Projekt mit deren GND-ID verknüpft. Sämtliche in der GND aufgenommenen alternativen Schreibweisen der Personen sind in die Datenbank integriert, so dass Autoren und Autorinnen in der Suche über alle alternativen Schreibweisen gefunden werden. Wird eine Person über eine alternative Schreibweise gefunden, so erscheint diese in eckigen Klammern hinter der in der Datenbank verwendeten Schreibweise.</p>
+    <p>Beispielsweise wird der Autor "Bonaventura" in der Datenbank über den Suchbegriff "Johannes" gefunden aufgrund des Alias "Johannes Bonaventura" aus der GND.
+    <p>Die Verweistexte Gossembrots werden über normalisierte Suchbegriffe gefunden. Normalisiert sind Abkürzungen und diverse Sonderzeichen, was die Suche stark erleichtert. Eine Suche nach "sermone" findet beispielsweise Verweistexte mit Gossembrots Wortlaut "ſmoe", der als "ſ(er)mo(n)e" transkribiert ist.</p>
+    <p>Die Suchresultate sind interaktiv und verlinkt. Per Mausklick kann jeweils an eine entsprechende Stelle gesprungen werden.</p>
+    <p>Neben der Freitextsuche bietet die Expertensuche weitere Such- und Filter- sowie Exportmöglichkeiten der Entitäten des Gossembrot-Portals in tabellarischer Form.</p>
 
-  <h3 class="subtitle margin-top">Suche</h3>
-    <p>Die Projektseite bietet mehrere Suchfunktionen. Eine Schnellsuche steht oben rechts allen Nutzerinnen und Nutzern zur Verfügung und kann auch über den Reiter “Expertensuche” abgerufen werden, der detailliertere Suchmöglichkeiten bietet. Sofern sie in der Gemeinsamen Normdatei (GND) erfasst sind, werden die in der Datenbank aufgeführten Autoren und Autorinnen mit ihrer GND-ID verknüpft. Die in der GND aufgenommenen alternativen Schreibweisen der einzelnen Personen können in der Schnellsuche gesucht werden. Weicht der gesuchte Name von jenem ab, der üblicherweise in der Datenbank verwendet wird, scheint dieser in der Schnellsuche in eckigen Klammern auf. Hinweis: Eine Suche nach alternativen Schreibweisen ist nur in der Schnellsuche möglich.</p>
-    <p>Eine Suche nach Autoren, Autorinnen und Texten ist in der Expertensuche möglich. Hier besteht auch die Möglichkeit, die Verweistexte zu durchsuchen.</p>
-
-  <h3 class="subtitle margin-top">Kodikologische Angaben in Gossembrots Terminologie</h3>
+    <h3 class="subtitle margin-top">Kodikologische Angaben in Gossembrots Terminologie</h3>
     <ul>
         <li><b>arcus modus:</b> Bezeichnet das Folio-Format. Beispiel: München, Bayerische Staatsbibliothek, Clm 17836, Format 26,8 x 20,7 cm, Benennung durch Gossembrot: ‚Albus codex spissus arcus modus in Didascalicon et aliis operibus‘ (nach München, Bayerische Staatsbibliothek, Clm 3559, Bl. 2r).</li>
         <li><b>textus modus:</b> Bezeichnet das Quart-Format. Beispiel München, Bayerische Staatsbibliothek, Clm 27419, Format 21 x 14,5 cm, Benennung durch Gossembrot: ‚Liber albus spissus confessionalis textus modus‘ (nach München, Bayerische Staatsbibliothek, Clm 3941, Bl.14r).</li>
@@ -66,7 +62,7 @@
   <ul class="margin-bottom-end">
       <li>Hinzufügungen: <app-tei-render-component [teiXmlString]="addExample"></app-tei-render-component></li>
       <li>Unterstreichungen: <app-tei-render-component [teiXmlString]="underlineExample"></app-tei-render-component> </li>
-      <li>Korrekturen: in <app-tei-render-component [teiXmlString]="gbExample"></app-tei-render-component>; die ursprüngliche Form wird in einem Tooltip angezeigt, wenn mit dem Mauszeiger darüber gefahren wird.</li>
+      <li>Korrekturen: <app-tei-render-component [teiXmlString]="gbExample"></app-tei-render-component>; die ursprüngliche Form wird in einem Tooltip angezeigt, wenn mit dem Mauszeiger darüber gefahren wird.</li>
       <li>Text, der nicht von Gossembrot geschrieben ist: <app-tei-render-component [teiXmlString]="ngbExample"></app-tei-render-component>;</li>
       <li>Durchgestrichene Buchstaben/Wörter: <app-tei-render-component [teiXmlString]="delExmaple"></app-tei-render-component></li>
       <li>Rückgängig gemachte Durchstreichung: <app-tei-render-component [teiXmlString]="undelExample"></app-tei-render-component></li>
@@ -78,7 +74,7 @@
       </li>
       <li>Offensichtliche Fehler: Ergänzung durch Ausrufezeichen <app-tei-render-component [teiXmlString]="teiSicExample"></app-tei-render-component></li>
       <li>Von Gossembrot verwendete Symbole: Maniculae werden mit <app-tei-render-component [teiXmlString]="teiManiculaExample"></app-tei-render-component> umgesetzt; alle anderen Symbole einheitlich <app-tei-render-component [teiXmlString]="teiSymbolExample"></app-tei-render-component></li>
-      <li>Von Gossembrot als Symbole verwendete Buchstaben <app-tei-render-component [teiXmlString]="teiBuchstabeAExample"></app-tei-render-component>,<app-tei-render-component [teiXmlString]="teiBuchstabeBExample"></app-tei-render-component>, ...</li>
+      <li>Von Gossembrot als Symbole verwendete Buchstaben: <app-tei-render-component [teiXmlString]="teiBuchstabeAExample"></app-tei-render-component>,<app-tei-render-component [teiXmlString]="teiBuchstabeBExample"></app-tei-render-component>, ...</li>
       <li>Schlusszeichen 1: <app-tei-render-component [teiXmlString]="teiFinisExample"></app-tei-render-component></li>
       <li>Schlusszeichen 2: <app-tei-render-component [teiXmlString]="teiFinisFullExample"></app-tei-render-component></li>
   </ul>
