--- a/src/app/view/pages/page-erlaeuterungen/erlaeuterungen.component.html
+++ b/src/app/view/pages/page-erlaeuterungen/erlaeuterungen.component.html
@@ -1,5 +1,5 @@
 <div class="erl meta-text">
-  <h2 class="title">Erläuterungen und Glossar Datenbank Gossembrot</h2>
+  <h2 class="title">Erläuterungen</h2>
 
   <strong class="margin-top">
     Stand: 28. Januar 2026
@@ -27,12 +27,11 @@
   <p>Hier sind Gossembrots Verweise auf bekannte oder weit verbreitete Texte zusammengetragen, für die sich kein einst vorhandenes physisches Exemplar erschließen lässt (Texte, die Gossembrot ‚im Kopf‘ hatte oder in fremden Bibliotheken konsultierte). Der weitere Seitenaufbau entspricht jenem der rekonstruierten Textträger.</p>
 
     <h3 class="subtitle margin-top">Suche</h3>
-    <p>Die Projektseite bietet mehrere Suchfunktionen. Eine <b>Schnellsuche steht</b> oben rechts zur Verfügung. Es handelt sich um eine Freitextsuche, welche Resultate nach Autoren, Texten, Verweistexten (Wortlaut Gossembrots) und Bennenungen der Handschriften Gossembrots gruppiert. Die Suche startet automatisch nach Eingabe von drei Zeichen. Dieselbe Suchmaske ist auch über den Reiter "Expertensuche" erreichbar.</p>
-    <p><b>Autoren und Autorinnen</b>, die in der <b>Gemeinsamen Normdatei (GND)</b> erfasst sind, hat das Projekt mit deren GND-ID verknüpft. Sämtliche in der GND aufgenommenen alternativen Schreibweisen der Personen sind in die Datenbank integriert, so dass Autoren und Autorinnen in der Suche über alle alternativen Schreibweisen gefunden werden. Wird eine Person über eine alternative Schreibweise gefunden, so erscheint diese in eckigen Klammern hinter der in der Datenbank verwendeten Schreibweise.</p>
-    <p>Beispielsweise wird der Autor "Bonaventura" in der Datenbank über den Suchbegriff "Johannes" gefunden aufgrund des Alias "Johannes Bonaventura" aus der GND.
-    <p>Die Verweistexte Gossembrots werden über normalisierte Suchbegriffe gefunden. Normalisiert sind Abkürzungen und diverse Sonderzeichen, was die Suche stark erleichtert. Eine Suche nach "sermone" findet beispielsweise Verweistexte mit Gossembrots Wortlaut "ſmoe", der als "ſ(er)mo(n)e" transkribiert ist.</p>
-    <p>Die Suchresultate sind interaktiv und verlinkt. Per Mausklick kann jeweils an eine entsprechende Stelle gesprungen werden.</p>
-    <p>Neben der Freitextsuche bietet die Expertensuche weitere Such- und Filter- sowie Exportmöglichkeiten der Entitäten des Gossembrot-Portals in tabellarischer Form.</p>
+    <p>Die Projektseite bietet mehrere Suchfunktionen. Eine Schnellsuche steht oben rechts zur Verfügung. Es handelt sich um eine Freitextsuche, welche Resultate nach Autoren, Texten, Querverweisen und Bennenungen der Handschriften durch Gossembrot gruppiert. Die Suche startet automatisch nach Eingabe von zwei Zeichen. Dieselbe Suchmaske ist (als ‚Freitextsuche‘) auch ist auch über den Reiter ‚Expertensuche‘ erreichbar, der weitere Suchfunktionen enthält</p>
+    <p>Autoren und Autorinnen, die in der Gemeinsamen Normdatei (GND) erfasst sind, sind mit deren GND-ID verknüpft. Sämtliche in der GND aufgenommenen alternativen Autornamen sind in die Datenbank integriert, so dass Autoren und Autorinnen in der Suche über alle alternativen Schreibweisen gefunden werden. Beispiel: Der Autor „Bonaventura“ wird in der Datenbank über den Suchbegriff „Johannes“ gefunden aufgrund des Alias „Johannes Bonaventura“ aus der GND.
+    <p>Gossembrots Querverweise werden über normalisierte Schreibungen gefunden. Zur Erleichterung der Suche sind Abkürzungen und Sonderzeichen normalisiert. Beispiel: Die Suche nach „sermone“ findet auch die als „ſ(er)mo(n)e“ aufgelöste Zeichenfolge.</p>
+    <p> Die Suchresultate sind mit den jeweiligen Stellen verlinkt.</p>
+    <p>Neben der Freitextsuche bietet die Expertensuche weitere Such-, Filter- und Exportmöglichkeiten.</p>
 
     <h3 class="subtitle margin-top">Kodikologische Angaben in Gossembrots Terminologie</h3>
     <ul>
